  * Stricter UTF-8 checks for test step output (BMC#17686)
  * Both absolute and $HOME/.ssh paths accepted for libssh2 keypairs (BMC#15292)
  * More specific version requirements for testrunner-lite test packages (BMC#17266)
  * Soft termination of test step during timeout on remote execution mode (BMC#9103)
  * Support for ssh key filename (-k) also with -t option (BMC#17683)

 -- Sampo Saaristo <sampo.saaristo@sofica.fi>  Mon, 30 May 2011 09:49:55 +0300

testrunner-lite (1.6.1) unstable; urgency=low

  * Fixes to process handling (possibility of busyloop removed) (by slahtinen)
  * Configure option to disable documentation generation (by slahtinen)
  * Existence of .profile file not expected with -t on target (by slahtinen)
  * Handling for SIGINT and SIGTERM in libssh2 executor (BMC#15129)
  * Issues with libssh2 executor and broken network connection (BMC#15197)
  * New option (-d) for fetching rich cores over ssh (by rikhalon)

 -- Sampo Saaristo <sampo.saaristo@sofica.fi>  Fri, 29 Apr 2011 08:34:40 +0300

testrunner-lite (1.6.0) unstable; urgency=low

  * Support for measurement timestamps and series (BMC#13915)
  * Support for generic executor (-E and -G) by Nick Wilson
  * Too small char array in unit test by Tero Koskinen (BMC#13886)

 -- Sampo Saaristo <sampo.saaristo@sofica.fi>  Thu, 24 Mar 2011 10:55:24 +0200

testrunner-lite (1.5.3) unstable; urgency=low

  * Fixed: libssh2 implementation does not source environment variables (BMC#13888)
  * Fixed: libssh2 implementation prints unnecessary errors to log (BMC#13890)
  * testrunner-lite unit tests can now be executed per suite (BMC#13550)
  * Fixed: empty manual step handling (BMC#13996)
  * Libssh2 implementation quote usage fixed
  * Output of soucing .profile during ssh execution directed to /dev/null

 -- Sampo Saaristo <sampo.saaristo@sofica.fi>  Wed, 09 Mar 2011 12:46:35 +0200

testrunner-lite (1.5.2) unstable; urgency=low

  * Possibility to provide ssh port with -t and -n options (BMC#13472)