@@ -9,8 +9,10 @@ testrunner-lite (1.7.0) unstable; urgency=low
   * More specific version requirements for testrunner-lite test packages (BMC#17266)
   * Soft termination of test step during timeout on remote execution mode (BMC#9103)
   * Support for ssh key filename (-k) also with -t option (BMC#17683)
+  * Error logging functions for XML parser/validator (BMC#18217)
+  * Remote connection check routine brought back (BMC#18218)
 
- -- Sampo Saaristo <sampo.saaristo@sofica.fi>  Mon, 30 May 2011 09:49:55 +0300
+ -- Sampo Saaristo <sampo.saaristo@sofica.fi>  Mon, 30 May 2011 16:50:05 +0300
 
 testrunner-lite (1.6.1) unstable; urgency=low
 
